// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experience renders correctly with a single item and no tags 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c8 {
  display: none;
}

.c9 {
  background: var(--color-background);
  border: none;
  border-radius: 999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
  color: var(--color-headline);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c9:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c10 {
  background: transparent;
  border: none;
  border-radius: 999px;
  box-shadow: none;
  color: var(--color-paragraph);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c10:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c0 {
  padding: 3rem 0;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c12 {
  border-top: 1px solid var(--color-main);
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr;
  padding: 2rem 0;
}

.c12:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c13 {
  font-size: 0.75rem;
  margin: 0 0 0.25rem;
}

.c14 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.125rem;
}

.c15 {
  margin: 0 0 0.625rem;
}

.c16 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0 0 1rem;
}

.c7 {
  line-height: 1.7;
  margin-bottom: 4rem;
  max-width: 680px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 899.98px) {
  html[data-mobile-view="story"] .c8 {
    background: rgba(128, 128, 128, 0.12);
    border-radius: 999px;
    display: flex;
    margin: 0 0 1.5rem;
    padding: 0.25rem;
  }
}

@media (min-width: 900px) {
  .c8 {
    display: none!important;
  }
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199.99px) {
  .c5 {
    margin-bottom: 1rem;
  }
}

@media (min-width: 900px) {
  .c12 {
    gap: 2rem;
    grid-template-columns: 200px 1fr;
  }
}

@media (max-width: 1199.99px) {
  .c7 {
    margin-bottom: 1rem;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Experience
      </p>
      <h2
        class="c4 c5"
      >
        Where I've worked
      </h2>
      <p
        class="c6 c7"
      >
        From ecommerce storefronts to design systems — the companies, projects and teams I've helped grow over the last ten years.
      </p>
      <div
        aria-label="Story sections"
        class="c8"
        role="tablist"
      >
        <button
          aria-controls="journey"
          aria-selected="true"
          class="c9"
          data-story-segment="journey"
          role="tab"
          tabindex="0"
        >
          Journey
        </button>
        <button
          aria-controls="experience"
          aria-selected="false"
          class="c10"
          data-story-segment="experience"
          role="tab"
          tabindex="-1"
        >
          Experience
        </button>
      </div>
      <ol
        class="c11"
      >
        <li
          class="c12"
        >
          <div
            class=""
          >
            <p
              class="c2 c13"
            >
              May 2022 — Present
            </p>
            <p
              class="c2 c14"
            >
              JIBE eCommerce
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c15"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c16"
            >
              Leading frontend development for headless Shopify storefronts.
            </p>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;

exports[`Experience renders correctly with all items 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c18 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c19 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c8 {
  display: none;
}

.c9 {
  background: var(--color-background);
  border: none;
  border-radius: 999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
  color: var(--color-headline);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c9:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c10 {
  background: transparent;
  border: none;
  border-radius: 999px;
  box-shadow: none;
  color: var(--color-paragraph);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c10:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c0 {
  padding: 3rem 0;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c12 {
  border-top: 1px solid var(--color-main);
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr;
  padding: 2rem 0;
}

.c12:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c13 {
  font-size: 0.75rem;
  margin: 0 0 0.25rem;
}

.c14 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.125rem;
}

.c15 {
  color: var(--color-secondary);
  font-size: 0.75rem;
  margin: 0;
}

.c16 {
  margin: 0 0 0.625rem;
}

.c17 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0 0 1rem;
}

.c7 {
  line-height: 1.7;
  margin-bottom: 4rem;
  max-width: 680px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 899.98px) {
  html[data-mobile-view="story"] .c8 {
    background: rgba(128, 128, 128, 0.12);
    border-radius: 999px;
    display: flex;
    margin: 0 0 1.5rem;
    padding: 0.25rem;
  }
}

@media (min-width: 900px) {
  .c8 {
    display: none!important;
  }
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199.99px) {
  .c5 {
    margin-bottom: 1rem;
  }
}

@media (min-width: 900px) {
  .c12 {
    gap: 2rem;
    grid-template-columns: 200px 1fr;
  }
}

@media (max-width: 1199.99px) {
  .c7 {
    margin-bottom: 1rem;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Experience
      </p>
      <h2
        class="c4 c5"
      >
        Where I've worked
      </h2>
      <p
        class="c6 c7"
      >
        From ecommerce storefronts to design systems — the companies, projects and teams I've helped grow over the last ten years.
      </p>
      <div
        aria-label="Story sections"
        class="c8"
        role="tablist"
      >
        <button
          aria-controls="journey"
          aria-selected="true"
          class="c9"
          data-story-segment="journey"
          role="tab"
          tabindex="0"
        >
          Journey
        </button>
        <button
          aria-controls="experience"
          aria-selected="false"
          class="c10"
          data-story-segment="experience"
          role="tab"
          tabindex="-1"
        >
          Experience
        </button>
      </div>
      <ol
        class="c11"
      >
        <li
          class="c12"
        >
          <div
            class=""
          >
            <p
              class="c2 c13"
            >
              May 2022 — Present
            </p>
            <p
              class="c2 c14"
            >
              JIBE eCommerce
            </p>
            <p
              class="c2 c15"
            >
              Remote · Vancouver, CA
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c16"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c17"
            >
              Building and maintaining headless Shopify storefronts on Next.js/TypeScript for brands including 7mesh, Nest Designs and Saul Good. Core contributor and maintainer of Compass, the agency's internal design system powering all client storefronts. Tech lead on selected projects and epics — technical direction, code reviews, and mentoring.
            </p>
            <div
              class="c18"
            >
              <span
                class="c19"
              >
                Next.js
              </span>
              <span
                class="c19"
              >
                TypeScript
              </span>
              <span
                class="c19"
              >
                Shopify
              </span>
              <span
                class="c19"
              >
                Storybook
              </span>
              <span
                class="c19"
              >
                styled-components
              </span>
            </div>
          </div>
        </li>
        <li
          class="c12"
        >
          <div
            class=""
          >
            <p
              class="c2 c13"
            >
              Mar 2020 — Apr 2022
            </p>
            <p
              class="c2 c14"
            >
              Overstappen.nl
            </p>
            <p
              class="c2 c15"
            >
              Hybrid · Amsterdam, NL
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c16"
            >
              Senior Frontend Developer → Architect
            </h3>
            <p
              class="c2 c17"
            >
              Frontend developer on the Netherlands' main price comparison platform — built the energy comparison product, led the health insurance tool, and architected Kizi.nl, a new consumer brand, alongside the CTO. Promoted to define tech stacks, coding standards, and CI/CD pipelines across the development team.
            </p>
            <div
              class="c18"
            >
              <span
                class="c19"
              >
                Next.js
              </span>
              <span
                class="c19"
              >
                TypeScript
              </span>
              <span
                class="c19"
              >
                Redux
              </span>
              <span
                class="c19"
              >
                Storybook
              </span>
              <span
                class="c19"
              >
                Jest
              </span>
              <span
                class="c19"
              >
                Azure DevOps
              </span>
            </div>
          </div>
        </li>
        <li
          class="c12"
        >
          <div
            class=""
          >
            <p
              class="c2 c13"
            >
              Jan 2019 — Feb 2020
            </p>
            <p
              class="c2 c14"
            >
              TWC / The Widget Company
            </p>
            <p
              class="c2 c15"
            >
              On-site · Amsterdam, NL
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c16"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c17"
            >
              Built Smart TV streaming applications for media companies — most notably Videoland, RTL Nederland's VOD service — deployed across Samsung, LG, Philips, Sony, Panasonic and PlayStation platforms.
            </p>
            <div
              class="c18"
            >
              <span
                class="c19"
              >
                Vue.js
              </span>
              <span
                class="c19"
              >
                TypeScript
              </span>
              <span
                class="c19"
              >
                Vuex
              </span>
              <span
                class="c19"
              >
                Jest
              </span>
              <span
                class="c19"
              >
                Webpack
              </span>
            </div>
          </div>
        </li>
        <li
          class="c12"
        >
          <div
            class=""
          >
            <p
              class="c2 c13"
            >
              Mar 2015 — Dec 2018
            </p>
            <p
              class="c2 c14"
            >
              Consoft Sistemi (now ALTEN Italia)
            </p>
            <p
              class="c2 c15"
            >
              On-site · Turin, IT
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c16"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c17"
            >
              Built and maintained FCA Group's Build & Price vehicle configurators for NAFTA and EMEA brand sites — Jeep, Ram, Dodge, Fiat, Alfa Romeo — and led frontend development of the Mopar accessories configurator. Nearly three years of ownership on high-traffic consumer tools.
            </p>
            <div
              class="c18"
            >
              <span
                class="c19"
              >
                React
              </span>
              <span
                class="c19"
              >
                Redux
              </span>
              <span
                class="c19"
              >
                JavaScript
              </span>
              <span
                class="c19"
              >
                Webpack
              </span>
              <span
                class="c19"
              >
                Node.js
              </span>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;
